--- a/html_build/pages/home/home.css
+++ b/html_build/pages/home/home.css
@@ -38,6 +38,12 @@ li.sport:hover, li.sport a:hover {
 	background-color : #FEFEFE;
 	margin : 0 15px 0 0;
 }
+#search-result{
+    padding-left:0px;
+}
+#search-result ul#image-list{
+    padding-left:15px;
+}
 #image-list, #menu {
 	margin: 5px 0;
 }
