--- a/html_build/packages/media/templates/image-item.html
+++ b/html_build/packages/media/templates/image-item.html
@@ -1,8 +1,11 @@
-<a href="{{_link}}" data-index="{{index}}" class="image-outer-h {{^_has_link}}open-photo-player-h{{/_has_link}}">
+<a href="{{_link}}" data-index="{{index}}" data-id="{{_media_id}}" class="image-outer-h {{^_has_link}}open-photo-player-h{{/_has_link}}">
 	<div class="image-item-container">
 		{{#_thumbnail}}<img class="list-thumbnail" src="{{_thumbnail}}" alt=""/>{{/_thumbnail}}
 		{{^_thumbnail}}
+
 			<div class="game-tile">{{_noicon_text}}</div>
+			<div class="back-cover">{{#_sports_icon}}<img src="{{_sports_icon}}" class="sports-icon" />{{/_sports_icon}}</div>
+
 		{{/_thumbnail}}
 		<div class="action-section">
 			{{#show_edit}}
