--- a/html_build/usercontrols/addgame/templates/layout.html
+++ b/html_build/usercontrols/addgame/templates/layout.html
@@ -1,31 +1,20 @@
-
+<div class="add-game-container-h"></div>
+<!--div class="add-game-container-h"></div>
 	<div class="well-large container_add_game">
-	<!-- <h4>Add Game</h4> -->
-	<!-- <div class="green-left-heading ">DATE</div> -->
 <div class="clear"></div>
 	<div class="section-Add-Sports_h">
 		<div class="section-game-date_h floatLeft">
 			<input type="text" class="txt-game-date_h txtDate" placeholder="Enter Date" readonly="readonly" />
 			<input type="text" class="txt-game-time_h hasDatepicker txtTime"  placeholder="Time" placeholder="Time" maxlength="5" />
 			
-			<span class="spn-ddl-time-period_h"></span>
-			<!-- <select class="ddl-time-period_h ddlTime">
-			<option value="AM">AM</option>
-			<option value="PM">PM</option>
-			</select> -->
-		
+			<span class="spn-ddl-time-period_h"></span>		
 			<div class="clear"></div>
 			<span class="displayNone field-message field-message_h"></span>
 		</div>
 		<div class="clear"></div>
-		<!-- <div class="row-fluid">
-			Select Sport:
-		</div> -->
-	<!-- <div class="green-left-heading">SPORT</div> -->
 	<div class="clear"></div>
 		<div class="row-fluid section-game-sports_h">
 <span class="span-ddl-sports_h">
-			<!-- <select class="ddl-game-sports_h"></select> -->
 				</span>
 			<div class="clear"></div>	
 			<span class="displayNone field-message field-message_h"></span>
@@ -34,19 +23,14 @@
 	</div>
 	<div class="clear"></div>
 	<div class="section-game-teams_h team-one_h displayNone">
-		<!-- <div class="green-left-heading">TEAM 1</div> -->
 		<div class="clear"></div>
 		Select Team 1 :
 			<div class="clear"></div>
 			<span class="span_ddl_team_h span_ddl_team_one_h"></span>
-		<!-- <select class="ddl-game-userteams_h"></select> -->
 		<a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a>
 		<div class="section-new-team_h">
-			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
-			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
 			<input type="text"class="txt txt-game-team_h displayNone" placeholder="Enter Team" />
 			<span class="indicator_h"></span>
-			<!-- <a href="javascript:void(0)" class="btn-ddl-team-game_h">Choose from select ?</a> -->
 		</div>
 			<div class="clear"></div>
 		<span class="displayNone field-message field-message_h"></span>
@@ -73,16 +57,10 @@
 	</div>
 
 	<div class="section-game-teams_h team-two_h displayNone">
-		<!-- <div class="green-left-heading">TEAM 2</div> -->
 		<div class="clear"></div>
 		Select Team 2 :
 			<div class="clear"></div>
-			<!-- <span class="span_ddl_team_h span_ddl_team_two_h"></span> -->
-		<!-- <select class="ddl-game-userteams_h"></select> -->
-		<!-- <a href="javascript:void(0)" class="btn-new-team-game_h">Team not listed ?</a> -->
 		<div class="section-new-team_h">
-			<!-- <input type="text" class="txt-game-state_h" placeholder="Enter State" />
-			<input type="text" class="txt-game-city_h displayNone" placeholder="Enter City" /> -->
 			<input type="text"class="txt-game-team_h" placeholder="Enter Team" />
 			<span class="indicator_h"></span>
 		</div>
@@ -100,11 +78,6 @@
 	</div>
 <div class="clear"></div>
 	<div class="section-main-location_h displayNone">
-		<!-- <div class="green-left-heading">LOCATION</div> -->
-		<!--div class="clear"></div>
-		<strong>Location : </strong>		
-<div class="clear"></div>
-		<input type="text" class="txt-game-location-id_h displayNone"-->
 		<div class="location-view-h">&nbsp;</div>
 		<input type="hidden" class="txt-game-location-id_h displayNone"/>
 		<div class="div-game-location_h"></div>
@@ -117,7 +90,7 @@
 	</div>
 	<div class="clear"></div>
 
-<!--END MODAL BODY--></div>
+</div-->
 <div class="modal-footer">
 	<button class="btn btn-primary btn-game-Finish_h floatRight displayNone">Create Game</button>
 	<button class="btn btn-primary btn-game-individual-Finish_h floatRight displayNone">Add Me To That Event</button>
