--- a/application/templates/index.mustache
+++ b/application/templates/index.mustache
@@ -49,11 +49,4 @@ ga('send', 'pageview');
     }
 }());
 
-</script><script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script></head><body><div id="fb-root"></div>
-<script>(function(d, s, id) {
-	var js, fjs = d.getElementsByTagName(s)[0];
-	if (d.getElementById(id)) return;
-	js = d.createElement(s); js.id = id;
-	js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=219148511595084";
-	fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script></body></html>
+</script><script data-main="{{base_url}}main" src="{{base_url}}vendor/require.js"></script></head><body></body></html>
