--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -1307,6 +1307,7 @@ margin-top:10px;
 .add-to-event {
 	margin-right: 25px;
 }
+form fieldset ul li:first-child {margin-left: -20px; }
 form fieldset ul li { height: 25px; }
 form fieldset ul li { float: left; margin: 0 20px 0 0; }
 form fieldset ul li input, form fieldset ul li label { float: left; margin: 0 0 0 20px; }
