--- a/html_build/pages/login/templates/logintemplate.html
+++ b/html_build/pages/login/templates/logintemplate.html
@@ -52,7 +52,7 @@
 
 <div class="forgot-password-container hide">
 	<div class="success-message hide">Password Reset link has been sent to your email address. Please check.</div>
-	<div class="error-message hide">Sorry we couldn't find the match record. Please try again with valid Email.</div>	
+	<div class="error-message errormsg hide">Sorry we couldn't find the match record. Please try again with valid Email.</div>	
 	<form action="" method="POST" class="forgot-password-form-h">
 		<!--<label for="">Email</label>-->
 		<div id="firstregbase">
