--- a/html/packages/game-schedules/templates/schedule-item.html
+++ b/html/packages/game-schedules/templates/schedule-item.html
@@ -2,7 +2,7 @@
 	<div class="select-team">
 	{{#teams}}
 		<div class="org-name">
-			<a href="/#team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
+			<a href="/#!team/{{team_id}}"><span class="team-label">{{org_name}} | {{complevel}} | {{season}} {{year}}</span></a>
 			<a href="javascript: void(0);" data-team-id="{{team_id}}" data-sport-id="0" title="add game" class="add-game-h right-with-icon">Add Game</a>
 			<!--<a href="javascript: void(0);" data-sport-id="0" title="add team" class="add-event-h">Click here to Add Event.</a>-->
 		</div>
