replaced the header with hash bang ref to home

--- a/html/pages/chrome/templates/header.html
+++ b/html/pages/chrome/templates/header.html
@@ -2,7 +2,7 @@
 <div class="row-fluid">
     <div class="logo">
     {{#branding}}
-    <a class="brand" title="home" href="#home">
+    <a class="brand" title="home" href="#!home">
         <img src="{{base_url}}{{src}}" id="header_logo" alt="{{alt}}" />
     </a>
     {{/branding}}
