--- a/html_build/packages/sportorg/templates/team-item.html
+++ b/html_build/packages/sportorg/templates/team-item.html
@@ -1,5 +1,5 @@
 
-	<!--<a href="/#game/{{id}}" class="background-blue team-info-h" tooltip="test">
+	<!--<a href="/#!game/{{id}}" class="background-blue team-info-h" tooltip="test">
 	<div class="game-info hide">
 		{{summary}}
 	</div> </a>
