--- a/html_build/pages/game/templates/header.html
+++ b/html_build/pages/game/templates/header.html
@@ -60,7 +60,7 @@
 				<input type="hidden" value="{{points_scored}}" data-id="{{games_teams_link_id}}" class="edit-score-input-h input-mini" />
 			</div>
 			<div class="org-info">
-				<span class="org-name"><a href="/#team/{{id}}">{{org_sport_link_obj.org.org_name}}, {{complevels_obj.complevel_name}}, {{seasons_obj.season_name}} {{year}}</a></span>
+				<span class="org-name"><a href="/#!team/{{id}}">{{org_sport_link_obj.org.org_name}}, {{complevels_obj.complevel_name}}, {{seasons_obj.season_name}} {{year}}</a></span>
 				<span class="org-location"> {{team_location}} </span>
 			</div>
 		</li>
