--- a/html_build/pages/profile/templates/sport-team.html
+++ b/html_build/pages/profile/templates/sport-team.html
@@ -5,7 +5,7 @@
 		{{#.}}
 
 			{{#teams}}
-			    <span class="team-item"><a href="/#team/{{id}}">{{complevel}} {{season}} {{year}}</a></span>
+			    <span class="team-item"><a href="/#!team/{{id}}">{{complevel}} {{season}} {{year}}</a></span>
 		    {{/teams}}
 		{{/.}}
     {{/sports}}
