--- a/html/usercontrols/photo-player/photoPlayer.css
+++ b/html/usercontrols/photo-player/photoPlayer.css
@@ -229,7 +229,10 @@ div.right-arrow-container > img{
 }
 
 .tags-name:hover{
-    background-color: #F4F4F4;
+    background-color: #e6e6e6;
+    -moz-box-shadow:    inset 1px 1px 1px 1px #c7c7c7;
+    -webkit-box-shadow: inset 1px 1px 1px 1px #c7c7c7;
+    box-shadow:         inset 1px 1px 1px 1px #c7c7c7;
 }
 
 .tags-name > span {
@@ -239,11 +242,33 @@ div.right-arrow-container > img{
 .tag-image-container{
     width: 10%;
     overflow: hidden;
+    position: relative;
+    display: inline-block;
+    float:left;
+    -moz-box-shadow:    1px 1px 7px 1px #8D8D8D;
+    -webkit-box-shadow: 1px 1px 7px 1px #8D8D8D;
+    box-shadow:         1px 1px 7px 1px #8D8D8D;
+    font-size: .7em;
+    line-height:10px;
+}
+
+.tag-image-container .tile-text{
+    text-align: center;
+    vertical-align: top;
+    font-size: .5em;
+    line-height: 9px;
+    color: #5E5E5E;
+    position: absolute;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
 }
 .tag-thumb{
     position: absolute;
-    max-width: 44px;
-    width:10%;
     display: block;
 }
 
@@ -306,17 +331,29 @@ ul#tags-list li {
 }
 
 ul#tags-list .tags-name img {
-	float:left
+/*	float:left */
 }
 
-a.deleteTag{
+div.deleteTag{
+    display: inline-block;
+    position: absolute;
+    right: 10px;
+    color: #a0a0a0;
     font-size: 2em;
     font-weight: bolder;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    line-height: 17px;
+    text-shadow: 1px 1px 1px #000000, 3px 3px 9px black;
+    cursor: pointer;
+}
+div.deleteTag:hover{
+    text-shadow: 2px 2px 1px #000000, 3px 3px 3px black;
 }
 
 ul#tags-list .tags-name a{
-    width:85%;
-    margin-left:10%;
+    width: 85%;
 }
 ul#tags-list .tags-name a span {
 	font-size: .8em;
@@ -434,7 +471,7 @@ margin-top: 0px;
 }
 
 .content-prof-sub{
-    float: right;
+    float: left;
     padding-top: 10px;
     margin-left: 22px;
 }
