--- a/html/usercontrols/landing/templates/landing.html
+++ b/html/usercontrols/landing/templates/landing.html
@@ -1,5 +1,15 @@
-<div>
-
-</div>
-<div id="reg">
+<div id="landing-info">
+	<div id="landing-header">
+		All Athletez.  One Place.
+	</div>
+	<div id="site-info">
+		<ul id="site-summary">
+			<li>Create your Profile</li>
+			<li>Connect with your teams and gyms</li>
+			<li>Share your games and achievements</li>
+			<li>Vote for the best stuff</li>
+			<li>Follow your favorite Athletes</li>
+		</ul>
+	</div>
+	<div id="reg-landing"></div>
 </div>
