--- a/html/usercontrols/landing/landing.css
+++ b/html/usercontrols/landing/landing.css
@@ -34,3 +34,101 @@
 #recommendations div img{
 
 }
+
+#landing-info{
+    margin-top:50px;
+    width: 700px;
+    height: 400px;
+    margin: auto;
+    border-radius: 10px;
+    padding:10px 40px;
+    
+    background-color: rgba(0,0,0,0.5);
+    -webkit-box-shadow: inset 0 0 5px #444444;
+}
+
+#landing-info li, #landing-info div{
+    color: #EFEFEF;
+    text-shadow: 0px 1px 1px rgba(247, 247, 247, 0.90);
+}
+#landing-info #landing-header{
+    width: 100%;
+    font-size: 2em;
+    font-weight: bold;
+    padding:25px 10px;
+    float: left;
+    text-align: center;
+}
+
+#landing-info #site-summary{
+    list-style-type: circle;
+    font-size: 1.6em;
+}
+
+#landing-info #site-summary li{
+   line-height: 30px;
+    margin-top:10px;
+}
+
+#site-info{
+    width: 420px;
+    margin-right:20px;
+    float: left;
+    border-right:3px dotted #333;
+}
+
+#reg-landing{
+    width: 250px;
+    float: right;
+
+}
+
+#reg-landing #regcontainer{
+    width: 100%;
+}
+#reg-landing #mainreg{
+    width:100%;
+}
+
+#reg-landing #fbpane {
+    margin: 0;
+    background: #3b5998;
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border-style: none;
+}
+
+#reg-landing #regpanemain {
+    width: 100%;
+}
+
+#reg-landing #firstregbase {
+    padding:0;
+    float: none;
+    width: 100%;
+}
+#reg-landing #firstregbase input{
+    width: 100%;
+    margin: 0;
+    margin-top:10px;
+
+}
+
+#reg-landing .signupsubmit{
+    margin-top:0;
+    padding-top: 10px;
+}
+
+#reg-landing .signupsubmit input{
+    background-color: #9DCA3C;
+    width: 50% !important;
+    color: white;
+    font-size: 20px;
+    border-style: none;
+    height: 40px;
+}
