--- a/html/usercontrols/landing/landing.css
+++ b/html/usercontrols/landing/landing.css
@@ -42,9 +42,36 @@
     margin: auto;
     border-radius: 10px;
     padding:10px 40px;
-    
     background-color: rgba(0,0,0,0.5);
     -webkit-box-shadow: inset 0 0 5px #444444;
+}
+
+#alternative-actions{
+    text-align: center;
+    margin: auto;
+    margin-top: 40px;
+    width: 700px;
+}
+#alternative-actions a{
+    display: inline-block;
+    text-align: center;
+    height: 20px;
+    width: 120px;
+    font-size: 2em;
+    font-weight: normal;
+    background-color: #9DCA3C;
+    color: white;
+    padding: 12px;
+    margin: 8px;
+    text-shadow: 0px 1px 1px rgba(247, 247, 247, 0.10);
+}
+
+#alternative-actions a:hover{
+    text-decoration: underline;
+}
+
+a#browse{
+    width: 350px;
 }
 
 #landing-info li, #landing-info div{
@@ -81,6 +108,10 @@
     width: 250px;
     float: right;
 
+}
+
+#reg-landing #mainreg{
+    background: none;
 }
 
 #reg-landing #regcontainer{
