--- a/html/usercontrols/landing/templates/landing.html
+++ b/html/usercontrols/landing/templates/landing.html
@@ -1,5 +1,5 @@
-<div id="landing-info">
-	<div id="landing-header">
+<div style="margin: auto; text-align: center; height: 120px;"> </div><div id="landing-info">
+	<div id="landing-header"><img src="http://cdn.athletez.com/resources/img/a_logo_smaller.png" style="width:50px; float: left;" />
 		All Athletez.  One Place.
 	</div>
 	<div id="site-info">
@@ -12,4 +12,9 @@
 		</ul>
 	</div>
 	<div id="reg-landing"></div>
+</div>
+
+<div id="alternative-actions">
+	<a href="javascript:void(0);" id="sign-in">Sign In</a>
+	<a href="javascript:void(0);" id="browse">Browse Athletez.com</a>
 </div>
