--- a/html_build/usercontrols/landing/templates/landing.html
+++ b/html_build/usercontrols/landing/templates/landing.html
@@ -1,5 +1,20 @@
-<div>
-
+<div style="margin: auto; text-align: center; height: 120px;"> </div><div id="landing-info">
+	<div id="landing-header"><img src="http://cdn.athletez.com/resources/img/a_logo_smaller.png" style="width:50px; float: left;" />
+		All Athletez.  One Place.
+	</div>
+	<div id="site-info">
+		<ul id="site-summary">
+			<li>Create your Profile</li>
+			<li>Connect with your teams and gyms</li>
+			<li>Share your games and achievements</li>
+			<li>Vote for the best stuff</li>
+			<li>Follow your favorite Athletes</li>
+		</ul>
+	</div>
+	<div id="reg-landing"></div>
 </div>
-<div id="reg">
+
+<div id="alternative-actions">
+	<a href="javascript:void(0);" id="sign-in">Sign In</a>
+	<a href="javascript:void(0);" id="browse">Browse Athletez.com</a>
 </div>
