--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -7,7 +7,19 @@
 		<div id="top-rated" class="p-l-20 clearfix clear"></div>
 
 		<div id="menu" class="p-l-20 clear"></div>
+		
 		<div class="search-result-outer">
+			
+			<div class="fixed-icons">
+				<ul>
+					<li><a class="icons photos" href="javascript:void(0);"></a></li>
+					<li><a class="icons videos" href="javascript:void(0);"></a></li>
+					<li><a class="icons athlete" href="javascript:void(0);"></a></li>
+					<li><a class="icons team" href="javascript:void(0);"></a></li>
+					<li><a class="icons events-games" href="javascript:void(0);"></a></li>
+				</ul>
+			</div>
+			
 			<div id="search-result" class="p-l-20 clear"></div>
 			<a href="javascript: void(0);" class="left-arrow-page home-page-arrow left-arrow-page-h">
 				<img src="http://cdn.athletez.com/resources/img/left_arrow.png">
@@ -16,6 +28,7 @@
 				<img src="http://cdn.athletez.com/resources/img/right_arrow.png">
 			</a>
 		</div>
+		
 	</div>
 	<div id="main-footer"></div>
 </div>
