--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -23,6 +23,11 @@
 			</ul>
 		</div>
 	</div>
+	
+	<div class="menu individual-reset-btn">
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="restype"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
+	</div>
+	
 	<div id="sport" class="menu span3">
 		<a href="javascript:void(0)" class="menu-link-h sport-link-h">
 			<span class="option-heading-h">ALL SPORTS</span>
@@ -51,6 +56,11 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="menu individual-reset-btn">
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="sport"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
+	</div>
+
 	<div id="location" class="menu span3">
 		<a href="javascript:void(0)" class="menu-link-h location-link-h"> <span class="option-heading-h">PLACE</span>
 			<div class="caret-large-container">
@@ -63,6 +73,10 @@
 			<!--div class="state"></div-->
 			<div class="city"></div>
 		</div>
+	</div>
+	
+	<div class="menu individual-reset-btn">
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="city"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
 	</div>
 
 	<div id="views" class="menu span2">
@@ -100,7 +114,12 @@
 			</div>
 		</div>
 	</div>
-	<div id="reset" class="menu span2" >
+	
+	<div class="menu individual-reset-btn">
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="views"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
+	</div>
+	
+	<div id="reset" class="menu span2">
 		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h" style="text-decoration: underline;">RESET</span></a>
 	</div>
 
