--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -12,11 +12,11 @@
 			
 			<div class="fixed-icons">
 				<ul>
-					<li><a class="icons photos" href="javascript:void(0);"></a></li>
-					<li><a class="icons videos" href="javascript:void(0);"></a></li>
-					<li><a class="icons athlete" href="javascript:void(0);"></a></li>
-					<li><a class="icons team" href="javascript:void(0);"></a></li>
-					<li><a class="icons events-games" href="javascript:void(0);"></a></li>
+					<li><a class="icons photos" title="media" href="javascript:void(0);"></a></li>
+					<li><a class="icons videos" title="videos" href="javascript:void(0);"></a></li>
+					<li><a class="icons athlete" title="athlete" href="javascript:void(0);"></a></li>
+					<li><a class="icons team" title="team" href="javascript:void(0);"></a></li>
+					<li><a class="icons events-games" title="events" href="javascript:void(0);"></a></li>
 				</ul>
 			</div>
 			
