--- a/html/pages/home/home.css
+++ b/html/pages/home/home.css
@@ -69,6 +69,7 @@ li.sport:hover, li.sport a:hover {
 #menu {
 	float: left;
 	width: 100%;
+	position: relative;
 }
 
 #menu #menu {
@@ -229,9 +230,9 @@ li.sport a:hover {
 }
 
 .fixed-icons {
-	position: fixed;
-	top: 30%;
-	left: 30px;
+	position: absolute;
+	top: 100px;
+	left: -110px;
 }
 
 
