--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -1,11 +1,24 @@
 <div class="demo-select">
 
 </div>
+
+<div class="fixed-icons">
+	<ul>
+		<li><a id="image" class="icons restype photos" data-number="1" title="media" href="javascript:void(0);"></a></li>
+		<li><a id="video" class="icons videos restype" title="videos" data-number="0" href="javascript:void(0);"></a></li>
+		<li><a  id="user" class="icons athlete restype" data-number="2" title="athlete" href="javascript:void(0);"></a></li>
+		<li><a id="org" class="icons team restype" data-number="4" title="team" href="javascript:void(0);"></a></li>
+		<li><a id="game" class="icons events-games restype" data-number="3" title="events" href="javascript:void(0);"></a></li>
+	</ul>
+</div>
+
+
+<div class="clearfix"></div>
+
 <div class="menu-outer-h">
 
-	<div id="resulttype" class="menu span3">
+	<!--div id="resulttype" class="menu span3">
 		<a href="javascript:void(0)" class="menu-link-h restype-link-h"><span class="option-heading-h">Athletes</span>
-
 			<div class="caret-large-container">
 				<span class="caret-large"></span>
 			</div>
@@ -13,7 +26,7 @@
 
 		<div class="dd menu-detail-h reset-view-area-h restype-options-h">
 
-			<div class="clearfix"></div>
+
 			<ul class="dropdown-menu" style="display: block; position: relative;">
 				<li><a id="user" class="restype" data-number="2" href="javascript:void(0)">Athletes</a></li>
 				<li><a id="image" class="restype" data-number="1" href="javascript:void(0)">Images</a></li>
@@ -22,11 +35,11 @@
 				<li><a id="org" class="restype" data-number="4" href="javascript:void(0)">Teams</a></li>
 			</ul>
 		</div>
-	</div>
+	</div-->
 	
-	<div class="menu individual-reset-btn">
+	<!--div class="menu individual-reset-btn">
 		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="restype"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
-	</div>
+	</div-->
 	
 	<div id="sport" class="menu span3">
 		<a href="javascript:void(0)" class="menu-link-h sport-link-h">
@@ -58,7 +71,7 @@
 	</div>
 	
 	<div class="menu individual-reset-btn">
-		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="sport"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="sport"><span class="option-heading-h">&times;</span></a>
 	</div>
 
 	<div id="location" class="menu span3">
@@ -76,7 +89,7 @@
 	</div>
 	
 	<div class="menu individual-reset-btn">
-		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="city"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="city"><span class="option-heading-h">&times;</span></a>
 	</div>
 
 	<div id="views" class="menu span2">
@@ -88,8 +101,6 @@
 		</a>
 
 		<div class="dd menu-detail-h reset-view-area-h view-options-h">
-			
-
 			<div class="dropdown">
 				<span> SORT BY</span>
 
@@ -116,12 +127,12 @@
 	</div>
 	
 	<div class="menu individual-reset-btn">
-		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="views"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="views"><span class="option-heading-h">&times;</span></a>
 	</div>
 	
-	<div id="reset" class="menu span2">
-		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h" style="text-decoration: underline;">RESET</span></a>
-	</div>
+	<!--div id="reset" class="menu span2">
+		<a href="javascript:void(0)" class="menu-link-h btn-link"><span class="option-heading-h reset-all-btn-h">&times;</span></a>
+	</div-->
 
 	<div class="pull-right search-box">
 		<input type="text" id="search" placeholder="SEARCH" style="height: 28px; margin:0px 5px;;"/><a href="javascript:void(0);" class="common-btn common-default-sky-dark common-btn-small">SEARCH</a>
