--- a/html/css/app.css
+++ b/html/css/app.css
@@ -1684,11 +1684,19 @@ a.add-to-event {
 	background: url(images/icons/sprites.png) no-repeat;
 	float: left;
 	margin: 10px 0 0 0;
-	-webkit-box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
-	-ms-box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
-	-o-box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);		
-	box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
+	-webkit-box-shadow: 1px 1px 20px 0px rgba(0,0,0,0.45);
+	-moz-box-shadow: 1px 1px 20px 0px rgba(0,0,0,0.45);
+	-ms-box-shadow: 1px 1px 20px 0px rgba(0,0,0,0.45);
+	-o-box-shadow: 1px 1px 21px 0px rgba(0,0,0,0.45);
+	box-shadow: 1px 1px 21px 0px rgba(0,0,0,0.45);
+}
+
+.icon_selected{
+    -webkit-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    -ms-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    -o-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
 }
 
 
@@ -1737,6 +1745,7 @@ a.add-to-event {
 	width: 50px;
 	height: 50px;
 }
+
 
 .photos_selected, .photos:hover{
 	background-position: -63px -181px ;
