--- a/html/pages/profilesetting/templates/club.html
+++ b/html/pages/profilesetting/templates/club.html
@@ -15,7 +15,7 @@
 <div>
 	<span class="span2">What Club?</span>
 	<input type="text" id="txt-club-club" placeholder="Just Start Typing" disabled="disabled" tabindex="1"/>
-	<a class="add-club-h" href="javascript: void(0);">Add a New Club</a>
+	<a class="add-club-h" href="javascript: void(0);">Club Not Listed?</a>
 	<p class="field-error"></p>
 	<p class="field-message"></p>
 </div>
