--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -487,6 +487,7 @@ ul.common-dropdown li.selected a {
 	position: absolute;
 	right: 0;
 	max-width: 50px;
+    max-height: 30px;
 }
 .down-arrow-outer a {
 	display: block;
@@ -1352,4 +1353,94 @@ div[data-error] {
 }
 a.add-to-event {
 	display: none;
+}
+.icons {
+	background: url(images/icons/sprites.png) no-repeat;
+	float: left;
+	margin: 10px 0 0 0;
+	-webkit-box-shadow: 1px 1px 20px 0px rgba(0,0,0,0.45);
+	-moz-box-shadow: 1px 1px 20px 0px rgba(0,0,0,0.45);
+	-ms-box-shadow: 1px 1px 20px 0px rgba(0,0,0,0.45);
+	-o-box-shadow: 1px 1px 21px 0px rgba(0,0,0,0.45);
+	box-shadow: 1px 1px 21px 0px rgba(0,0,0,0.45);
+}
+.icon_selected{
+    -webkit-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    -ms-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    -o-box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+    box-shadow: 5px 5px 10px 0px rgba(0,0,0,0.75);
+}
+.athlete {
+	background-position: -6px -240px ;
+	width: 50px;
+	height: 50px;
+}
+.athlete_selected, .athlete:hover {
+	background-position: -63px -240px ;
+	width: 50px;
+	height: 50px;
+}
+.events-games {
+	background-position: -6px -61px ;
+	width: 50px;
+	height: 50px;
+}
+.events-games_selected, .events-games:hover {
+	background-position: -63px -62px ;
+	width: 50px;
+	height: 50px;
+}
+.leagues{
+	background-position: -4px -306px ;
+	width: 50px;
+	height: 50px;
+}
+.leagues_selected, .leagues:hover {
+	background-position: -63px -305px ;
+	width: 50px;
+	height: 50px;
+}
+.photos{
+	background-position: -6px -182px ;
+	width: 50px;
+	height: 50px;
+}
+.photos_selected, .photos:hover{
+	background-position: -63px -181px ;
+	width: 50px;
+	height: 50px;
+}
+.team {
+	background-position: -7px -121px ;
+	width: 50px;
+	height: 50px;
+}
+.team_selected, .team:hover{
+	background-position: -63px -120px ;
+	width: 50px;
+	height: 50px;
+}
+.videos{
+	background-position: -6px -4px ;
+	width: 50px;
+	height: 50px;
+}
+.videos_selected, .videos:hover{
+	background-position: -63px -4px ;
+	width: 50px;
+	height: 50px;
+}
+.individual-reset-btn {
+	float: left;
+}
+.individual-reset-btn span {
+	font-size: 1em;
+}
+.individual-reset-btn a {
+	text-decoration: none;
+	text-shadow: 0px 0px 19px rgba(150, 150, 150, 1);
+}
+.individual-reset-btn a span {
+	text-shadow: 0px 0px 19px rgba(150, 150, 150, 1);
 }
