--- a/html_build/packages/sport/templates/sport-item.html
+++ b/html_build/packages/sport/templates/sport-item.html
@@ -1,4 +1,4 @@
 {{#payload}}
-<a href="javascript: void(0);">
-<img src="{{small_icon}}" class="tiny-sport-icon"/>{{sport_name}}</a>
+<a href="javascript: void(0);" class="sport-item-h" data-id="{{sport_id}}">
+<img src="{{small_icon}}"  class="tiny-sport-icon"/>{{sport_name}}</a>
 {{/payload}}
