--- a/html_build/pages/home/home.css
+++ b/html_build/pages/home/home.css
@@ -10,83 +10,85 @@
 	border: 10px solid #ccc;
 	border: 10px solid rgba(0, 0, 0, 0.2);
 }
-.dropdown span{
-    float: left;
-    padding:5px;
-    font-weight: bolder;
+.dropdown span {
+	float: left;
+	padding: 5px;
+	font-weight: bolder;
 }
-li.sport{
-    line-height: 25px;
+li.sport {
+	line-height: 25px;
 }
-li.sport a{
-    padding:3px 0 3px 5px;
+li.sport a {
+	padding: 3px 0 3px 5px;
 }
-input[type="text"]#city{
-    margin: 0;
+input[type="text"]#city {
+	margin: 0;
 }
 .select, .select a {
 	background-color: #33aeab;
-    color: #FFFFFF !important;
-    text-decoration: none;
+	color: #FFFFFF !important;
+	text-decoration: none;
 }
 li.sport:hover, li.sport a:hover {
 	background-color: #33aeab;
-    color: #FFFFFF !important;
-    text-decoration: none;
+	color: #FFFFFF !important;
+	text-decoration: none;
 }
 .sport-list {
-	background-color : #FEFEFE;
-	margin : 0 15px 0 0;
+	background-color: #FEFEFE;
+	margin: 0 15px 0 0;
 }
-#search-result{
-    padding-left:0px;
+#search-result {
+	padding-left: 0px;
 }
-#search-result ul#image-list{
-    padding-left:15px;
+#search-result ul#image-list {
+	padding-left: 15px;
 }
 #image-list, #menu {
 	margin: 5px 0;
 }
 #menu {
-	float: left; width: 100%;
+	float: left;
+	width: 100%;
+	position: relative;
 }
-#menu #menu{
-    border: 0;
-    width: 90%;
-    padding:15px 0 0 15px;
+#menu #menu {
+	border: 0;
+	width: 90%;
+	padding: 15px 0 0 15px;
 }
-#menu .menu{
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+#menu .menu {
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
-#menu .menu-link-h,#menu span.show{
-    font-weight: bolder;
-    font-family: 'Raleway', "HelveticaNeue";
-    font-size: 1.2em;
-    color:#333;
-    text-transform: uppercase;
+#menu .menu-link-h, #menu span.show {
+	font-weight: bolder;
+	font-family: 'Raleway', "HelveticaNeue";
+	font-size: 1.2em;
+	color: #333;
+	text-transform: uppercase;
 }
-#menu span.show{
-    margin-top:3px;
-    margin-right: 5px;
+#menu span.show {
+	margin-top: 3px;
+	margin-right: 5px;
 }
-.seach-box{
-    margin:0 15px 0 15px;
+.seach-box {
+	margin: 0 15px 0 15px;
 }
-.type-icons a{
-    color: #333;
-    padding: 0 10px 0 5px;
+.type-icons a {
+	color: #333;
+	padding: 0 10px 0 5px;
 }
-img.tiny-sport-icon{
-    max-width: 20px;
-    max-height: 20px;
-    margin-right:4px;
+img.tiny-sport-icon {
+	max-width: 20px;
+	max-height: 20px;
+	margin-right: 4px;
 }
 li.sport a {
 	display: inline-block;
 	width: 100%;
-float: left;
+	float: left;
 }
 li.sport.select a {
 	color: #FFF;
@@ -94,25 +96,25 @@ li.sport.select a {
 li.sport a:hover {
 	color: #FFF;
 }
-.caret-large-container{
-    background-color: #333;
-    height: 14px;
-    width: 14px;
-    padding: 3px;
-    display: inline-block;
-    margin: 0 0 0 8px;
-    text-align: center;
-    top: 3px;
-    position: relative;
+.caret-large-container {
+	background-color: #333;
+	height: 14px;
+	width: 14px;
+	padding: 3px;
+	display: inline-block;
+	margin: 0 0 0 8px;
+	text-align: center;
+	top: 3px;
+	position: relative;
 }
-.caret-large{
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-width: 9px 6px 0 6px;
-    border-color: #FFF transparent transparent transparent;
-    display: inline-block;
-    margin: 0 0 3px 0;
+.caret-large {
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 9px 6px 0 6px;
+	border-color: #FFF transparent transparent transparent;
+	display: inline-block;
+	margin: 0 0 3px 0;
 }
 .register-wrapper {
 	background: url(/images/background/register_background.jpg) no-repeat;
@@ -130,7 +132,7 @@ li.sport a:hover {
 #regcontainer #mainreg {
 	background-color: transparent;
 	opacity: 1;
-    height: 330px;
+	height: 330px;
 }
 .homePage #main {
 	padding-top: 0px;
@@ -143,7 +145,7 @@ li.sport a:hover {
 }
 #regcontainer #firstreg {
 	float: left;
-width: 350px;
+	width: 350px;
 }
 #mainreg #regpane {
 	width: 470px;
@@ -152,7 +154,7 @@ width: 350px;
 	margin-top: 0;
 	background-color: #FFF;
 	width: 300px;
-height: 35px;
+	height: 35px;
 }
 #regpane input.regsubmit {
 	margin: 108px -10px 0 0;
@@ -173,12 +175,20 @@ height: 35px;
 	margin-left: 84px;
 	color: #FFF;
 }
-.row-fluid .span2{
-		width: 11%;
+.row-fluid .span2 {
+	width: 12%;
+}
+#location.span3 {
+	width: 12%;
 }
 .row-fluid .span3 {
-    width: 22.077%;
+	width: 17%;
 }
-.underline-text{
-		text-decoration: underline;
+.underline-text {
+	text-decoration: underline;
+}
+.fixed-icons {
+	position: absolute;
+	top: 100px;
+	left: -110px;
 }
