--- a/html_build/pages/profilesetting/templates/highschool.html
+++ b/html_build/pages/profilesetting/templates/highschool.html
@@ -15,7 +15,7 @@
 	<div>
 		<span class="span2">What School?</span>
 		<input type="text" id="txt-school-school" placeholder="Just Start Typing" disabled="disabled"/>
-		<a class="add-school-h" href="javascript: void(0);">Add a New School</a>
+		<a class="add-school-h" href="javascript: void(0);">School Not Listed</a>
 		<p class="field-error"></p>
 		<p class="field-message"></p>
 	</div>
