--- a/html/pages/home/templates/menu.html
+++ b/html/pages/home/templates/menu.html
@@ -38,7 +38,7 @@
 	</div-->
 	
 	<!--div class="menu individual-reset-btn">
-		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="restype"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h hide" data-type="restype"><span class="option-heading-h" style="text-decoration: underline;">RESET</span></a>
 	</div-->
 	
 	<div id="sport" class="menu span3">
@@ -52,26 +52,23 @@
 
 		<div class="dd menu-detail-h reset-sport-area-h sports-option-h">
 			<!--<a href="javascript: void(0);" class="btn sport-reset-btn-h">Reset</a>-->
-
 			<div class="left text-center">
 				<strong>Guys</strong>
 				<div id='boys' class="text-left sport-list"></div>
 			</div>
 			<div class="left text-center">
 				<strong>Girls</strong>
-
 				<div id='girls' class="text-left sport-list"></div>
 			</div>
 			<div class="left text-center">
 				<strong>Both</strong>
-
 				<div id='both' class="text-left sport-list"></div>
 			</div>
 		</div>
 	</div>
 	
 	<div class="menu individual-reset-btn">
-		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="sport"><span class="option-heading-h">&times;</span></a>
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h hide" data-type="sport"><span class="option-heading-h">&times;</span></a>
 	</div>
 
 	<div id="location" class="menu span3">
@@ -89,12 +86,11 @@
 	</div>
 	
 	<div class="menu individual-reset-btn">
-		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="city"><span class="option-heading-h">&times;</span></a>
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h hide" data-type="city"><span class="option-heading-h">&times;</span></a>
 	</div>
 
 	<div id="views" class="menu span2">
 		<a href="javascript:void(0)" class="menu-link-h view-link-h"><span class="option-heading-h">ORDER</span>
-
 			<div class="caret-large-container">
 				<span class="caret-large"></span>
 			</div>
@@ -115,7 +111,6 @@
 
 			<div class="dropdown">
 				<span>TIME FRAME</span>
-
 				<div class="clearfix"></div>
 				<ul class="dropdown-menu dropdown-menu-alias" style="display: block; position: relative;">
 					{{#views.time}}
@@ -127,7 +122,7 @@
 	</div>
 	
 	<div class="menu individual-reset-btn">
-		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h" data-type="views"><span class="option-heading-h">&times;</span></a>
+		<a href="javascript:void(0)" class="menu-link-h btn-link reset-option-btn-h hide" data-type="views"><span class="option-heading-h">&times;</span></a>
 	</div>
 	
 	<!--div id="reset" class="menu span2">
