small changes and added jpgs to landing list

--- a/html/usercontrols/tag/templates/layout.html
+++ b/html/usercontrols/tag/templates/layout.html
@@ -41,7 +41,7 @@
 		<div class="clear"></div>
 		<input type="text" class="txt-tag-team-city_h displayNone" placeholder="Enter City" />
 		<div class="clear"></div>
-		<input type="text"class="txt-tag-team-school_h displayNone" placeholder="Enter Team" />
+		<input type="text"class="txt-tag-team-school_h" placeholder="Enter Team" />
 	<!--	<select class="ddl-tag-team-level_h displayNone"></select>
 		<select class="ddl-tag-team-season_h displayNone"></select> -->
 	 	<div class="clear"></div>
