--- a/html/css/app.css
+++ b/html/css/app.css
@@ -643,6 +643,7 @@ ul.ui-autocomplete {
 	padding: 10px 0 !important;
 	background: rgb(255, 255, 255) !important;
     z-index: 1060;
+    width: 250px;
 }
 
 .ui-autocomplete-loading{
@@ -656,6 +657,9 @@ ul.ui-autocomplete {
 	padding: 0 !important;
 	
 	background: rgb(255, 255, 255) !important;
+    font-family: "Helvetica Neue", "Raleway";
+    font-size: .8em;
+    font-weight: lighter;
 }
 
 .ui-autocomplete li.ui-menu-item a {
@@ -670,7 +674,7 @@ span.ui-helper-hidden-accessible {
 
 .ui-menu .ui-menu-item a:hover, .ui-state-focus {
 	color: #FFF !important;
-	background: #1AA0AE !important;
+	background: #33aeab !important;
 	border: none !important;
 }
 
