--- a/html/pages/game/game.css
+++ b/html/pages/game/game.css
@@ -4,13 +4,17 @@
 	float: left;
 	width: 100%;
 	padding: 0;
-    font-family: 'Nunito',"HelveticaNeue","Helvetica";
 }
 
 .game-heading > * {
 margin:10px;
 }
 
+.game-edit-btn-h{
+    background-color: #d7d7d7;
+    color: black;
+    padding:5px 10px;
+}
 .game-heading h3 {
 	font-weight: bold;
 	font-size: 50px;
@@ -27,15 +31,12 @@ margin:10px;
 
 .game-heading .game-general{
     display: block;
-    width: 100%;
-    text-align: justify;
-    -ms-text-justify: distribute-all-lines;
-    text-justify: distribute-all-lines;
+    width: 80%;
 }
 
 .game-heading .game-general span{
-    font-size: 2.5em;
-    font-weight: bolder;
+    font-size: 1.7em;
+    font-weight: bold;
     font-family: inherit;
     margin-right:30px;
     text-align: center;
