--- a/html/pages/game/game.css
+++ b/html/pages/game/game.css
@@ -10,6 +10,10 @@
 margin:10px;
 }
 
+#main-header .span3.image-outer-h{
+    min-width: 255px;
+}
+
 .game-edit-btn-h{
     background-color: #d7d7d7;
     color: black;
@@ -79,7 +83,7 @@ div.stretch{
 ul.teams-list{
     display:inline-block;
     padding:10px;
-    width: 65%;
+    width: 60%;
     float: left;
 }
 
@@ -154,7 +158,7 @@ li.team-item div.org-info{
 
 .org-info span.org-name{
     font-size: 1.5em;
-    font-weight: bolder;
+    font-weight: 300;
 
 }
 
