--- a/html/usercontrols/landing/templates/landing.html
+++ b/html/usercontrols/landing/templates/landing.html
@@ -1,20 +1,16 @@
-<div style="margin: auto; text-align: center; height: 120px;"> </div><div id="landing-info">
-	<div id="landing-header"><img src="http://cdn.athletez.com/resources/img/a_logo_smaller.png" style="width:50px; float: left;" />
-		All Athletez.  One Place.
+<div style="margin: auto; text-align: center; height: 30px;"> </div><div id="landing-info">
+	<div id="landing-header"><!--<img src="http://cdn.athletez.com/resources/img/a_logo_smaller.png" style="width:50px; float: left;" />-->
+		Athletez Live Here.
+		<hr />
 	</div>
 	<div id="site-info">
-		<ul id="site-summary">
-			<li>Create your Profile</li>
-			<li>Connect with your teams and gyms</li>
-			<li>Share your games and achievements</li>
-			<li>Vote for the best stuff</li>
-			<li>Follow your favorite Athletes</li>
-		</ul>
+		And we mean all athletes.  It's simple: create a profile, connect with your team, share your games, post your highlights, get discovered.
+		<hr />
 	</div>
-	<div id="reg-landing"></div>
 </div>
-
+<div id="reg-landing"></div>
+		<!--
 <div id="alternative-actions">
 	<a href="javascript:void(0);" id="sign-in">Sign In</a>
 	<a href="javascript:void(0);" id="browse">Browse Athletez.com</a>
-</div>
+</div>-->
