--- a/html/pages/signup/templates/registration_landing.html
+++ b/html/pages/signup/templates/registration_landing.html
@@ -8,7 +8,7 @@
 
 		<div id="fbpane">
 			<div id="label">
-				Register / Login with facebook
+				Connect with Facebook
 			</div>
 			<div id="fblogo"><span></span></div>
 		</div>
@@ -25,6 +25,7 @@
 					<input type="text" name="email" placeholder="Email" />
 					<div class = "signupsubmit">
 						<input type="submit" name="create" value="Sign Up" class="regsubmit" />
+						<input type="button" name="login" value="Log In" class="login" />
 					</div>
 					<div class="error">
 					</div>
