--- a/html/pages/signup/templates/registration_landing.html
+++ b/html/pages/signup/templates/registration_landing.html
@@ -12,9 +12,7 @@
 			</div>
 			<div id="fblogo"><span></span></div>
 		</div>
-		<div class ="regor">
-			or
-		</div>
+		<div class ="regor">or</div>
 		<div id="regpanemain">
 			<form action="#/user/create" method="post" class="signupform" accept-charset="utf-8">
 				<div id="firstregbase">
