--- a/html_build/pages/signup/templates/registration_landing.html
+++ b/html_build/pages/signup/templates/registration_landing.html
@@ -8,13 +8,11 @@
 
 		<div id="fbpane">
 			<div id="label">
-				Register / Login with facebook
+				Connect with Facebook
 			</div>
 			<div id="fblogo"><span></span></div>
 		</div>
-		<div class ="regor">
-			or
-		</div>
+		<div class ="regor">or</div>
 		<div id="regpanemain">
 			<form action="#/user/create" method="post" class="signupform" accept-charset="utf-8">
 				<div id="firstregbase">
@@ -25,6 +23,7 @@
 					<input type="text" name="email" placeholder="Email" />
 					<div class = "signupsubmit">
 						<input type="submit" name="create" value="Sign Up" class="regsubmit" />
+						<input type="button" name="login" value="Log In" class="login" />
 					</div>
 					<div class="error">
 					</div>
