--- a/html_build/pages/login/templates/logintemplate.html
+++ b/html_build/pages/login/templates/logintemplate.html
@@ -5,7 +5,7 @@
 		<div id="mainreg">
 			<div id="fbpane">
 				<div id="label">
-					Register / Login with facebook
+					Connect with Facebook
 				</div>
 				<div id="fblogo"><span></span></div>
 			</div>
