--- a/html_build/pages/profilesetting/templates/sportscheckbox.html
+++ b/html_build/pages/profilesetting/templates/sportscheckbox.html
@@ -4,9 +4,11 @@
 			<div class="sport-name">
 				<input type="checkbox" id="chk-ind-{{sport_id}}" class="chk-single" sportid="{{sport_id}}" />
 
-				<img src="{{icon}}" />
+				<img src="{{icon}}" alt="{{sports_name}}" />
 
 				{{sports_name}}
+				<span class="alert alert-danger displayNone error_h"></span>
+				<span class="alert alert-success displayNone success_h"></span>
 			</div>
 		</div>
 	</div>
