--- a/html_build/pages/signup/templates/registration.html
+++ b/html_build/pages/signup/templates/registration.html
@@ -10,9 +10,8 @@
 
 		<div id="fbpane">
 			<div id="label">
-				Register / Login with facebook
+				Connect with Facebook
 			</div>
-			<div id="fblogo"><span></span></div>
 		</div>
 		<div class ="regor">
 			or
