--- a/html/packages/media/templates/add-media.html
+++ b/html/packages/media/templates/add-media.html
@@ -1,1 +1,2 @@
-{{#links}}<a href="{{link}}" title="{{label}}" id="{{id}}">{{label}}</a>{{/links}}
+
+{{#links}}<li><a href="{{link}}" title="{{label}}" id="{{id}}">{{label}}</a></li>{{/links}}
