--- a/html/packages/roster/templates/roster.html
+++ b/html/packages/roster/templates/roster.html
@@ -1,3 +1,3 @@
 <div class="green-left-heading heading-h"></div>
-<div class="clear"><a href="javascript: void(0);" class="hide add-to-roster-h" title="Add to roster">Add to Roster</a></div>
-<div  class="clearfix clear roster-images-h"></div>
+<!--div class="clear"><a href="javascript: void(0);" class="hide add-to-roster-h" title="Add to roster">Add to Roster</a></div-->
+<div  class="clear roster-images-h"></div>
