--- a/html/pages/team/templates/layout.html
+++ b/html/pages/team/templates/layout.html
@@ -12,7 +12,7 @@
 	<div class="row-fluid" id="main-content">
 		<div id="image-wrap" class="clearfix clear">
 		</div>
-		<div id="add-media" class="clearfix">add media</div>
+		<!--div id="add-media" class="clearfix">add media</div-->
 	</div>
 	
 	<div class="row-fluid">
