--- a/html/pages/game/templates/layout.html
+++ b/html/pages/game/templates/layout.html
@@ -6,21 +6,17 @@
 		<!-- <div id="video-wrap" class="clearfix"></div> -->
 		<div id="image-wrap" class="clearfix clear">
 		</div>
-		<div id="add-media" class="clearfix">add media</div>
+		<!--div id="add-media" class="clearfix">add media</div-->
 	</div>
 
 	<div class="green-left-heading">MESSAGE BOARD</div>
 	<div id="commenton-wrap" class="clearfix clear commentson-outer-box-h"></div>
 	<div id="comment_div" class="clearfix"></div>
 	
-	
-
-	
 	<div id="roster-wrap" class="clearfix clear"></div>
 	
 	<div class="green-left-heading participants-heading-h hide">PARTICIPANTS</div>
 	<div id="participants_div" class="clearfix clear"></div>
-
 	
 	<div class="row-fluid">
 		<div class="span4" id="main-sidebar">
