--- a/html_build/pages/registration/templates/register_facebook.html
+++ b/html_build/pages/registration/templates/register_facebook.html
@@ -1,50 +1,50 @@
 {{#errorDisplay}}
-<div class="span8" style="color:red;"> Error:  {{errorValue}} </div>
+<div class="span8" style="color:red;"> Error: {{errorValue}}</div>
 {{/errorDisplay}}
 
 {{^errorDisplay}}
- 
-
-
 {{#payload}}
 
-
-<h1>Register with Facebook</h1>
 <div class="row-fluid">
-	<div class="span4">
-		<img class="picture" src="{{profile_picture}}" alt="{{name}}"/><br/>
+	<div class="span5">
+		<ul id="fb-userpic-prev">
+			<li><img style="width:100%;" class="picture" src="{{profile_picture}}" alt="{{name}} Facebook Avatar"/></li>
+		</ul>
 	</div>
-	<div class="span8">
-		<h3>{{name}}</h3>
+	<div class="span7 fbreg-fields">
 
 		<div class="field">
-			DOB:
+			<div class="label">Birthday</div>
 			<span class="value" data-name="birthday" data-value="{{birthday}}">
-				<input type="hidden" name="birthday" value="{{birthday}}"/>
-				{{birthday}} <a href="#" class="change-field">change</a>
+				<input type="text" name="birthday" value="{{birthday}}" disabled="disabled"/><div class="edit">&nbsp;</div>
+
 			</span>
 		</div>
 
 		<div class="field">
-			Email:
+			<div class="label">Email Address</div>
 			<span class="value" data-name="email" data-value="{{email}}">
-				<input type="hidden" name="email" value="{{email}}"/>
-				{{email}} <a href="#" class="change-field">change</a>
+				<input type="text" name="email" value="{{email}}" disabled="disabled"/><div class="edit">&nbsp;</div>
 			</span>
 		</div>
 		<div class="field">
-			Password: <input type="password" class="password" name="password"/>
+			<div class="label">Password</div>
+			<input type="password" class="password" name="password" placeholder="Password Again"/>
 		</div>
 		<div class="field">
-			Again: <input type="password" name="password-again"/>
+			<div class="label">Again</div>
+			<input type="password" name="password-again" placeholder="Password Again"/>
 		</div>
 		<div class="password-error"></div>
+
+		<div class="row-fluid">
+			<label for="agree"><input type="checkbox" id="agree" name="agree"/>I have read and agree to the <a href="tos.html" target="_blank" style="text-decoration:underline;;">Terms of Service</a></label>
+		</div>
+
 	</div>
+	<div class="row-fluid"><a href="javascript:void(0);" class="next btn-common btn-green">What's Next</a></div>
 </div>
-<div class="row-fluid">
-	<label for="agree"><input type="checkbox" id="agree" name="agree"/>I have read and agree to the <a href="#">Terms of Service</a></label>
-	<a href="javascript:void(0);" class="next btn-common btn-green">What's Next</a>
-</div>
+
 {{/payload}}
 
 {{/errorDisplay}}
