--- a/html_build/pages/signup/templates/basciFinal.html
+++ b/html_build/pages/signup/templates/basciFinal.html
@@ -7,73 +7,65 @@
 		<div id="regpanefinal">
 			<form action="#/user/create" method="post" accept-charset="utf-8">
 				<div id="finalreg">
-					<div class="firstdiv" id="firstname">
-						<div class="label">
-							<label for="Name">Name</label>
-						</div>
+					<div class="field" id="firstname">
+						<span>Name</span>
 						<input type="text" id="first_name" name="Name" placeholder="Name" />
-						<a id="editname" class="hide">edit</a>
 					</div>
-					<div class="seconddiv" id="dob">
-						<div class="label">
-							<label for="born">Born</label>
-						</div>	
-						
-					</div>
-					<div class="thirddiv" id="email">
+
+					<div class="field" id="email">
 						<div class="label">
 							<label for="Email">Email</label>
-						</div>	
+						</div>
 						<input type="text" name="email" id="emailInput" placeholder="Email" />
 					</div>
-					<div class="fourthdiv">
 
-						<div class="label">
-							<label for="Gender">Gender</label>
-						</div>
-						<div class="Gender" id="Gender">
+					<div class="field">
+						<span>Birthday</span>
+						<div style="width:94%;" id="dob"></div>
+					</div>
+					<!--
+										<div class="field">
 
-							<div class="radioinput" id="radioinput1"><input type="radio" id="male" name="gender" value="M"></div>
-							<div class="radio"><label for="male">Male</label></div>
-							<div class="radioinput" id="radioinput2"><input type="radio" id="Female" name="gender" value="F"></div>
-							<div class="radio"><label for="Female">Female</label></div>
-						</div>
-						
-					</div>
-					<div class="fifthdiv">
-						<div class="label">
-							<label>I am</label>
-						</div>
-						<div class="Role" id="Role">
-							<div class="radioinput"><input type="radio" id="athlete" name="role" value="A" /></div>
-							<div class="radio"><label for="athlete">An Athlete</label></div>
-							<div class="radioinput"><input type="radio" id="Fan" name="role" value="F"></div>
-							<div class="radio"><label for="Fan">A Fan</label></div>
-						</div>
-					
-					</div>
-					<div class="sixthdiv">
-						<div class="label">
-							<label for="Password">Password</label>
-						</div>	
+											<div class="gender" id="gender">
+												<div class="left-option" style="
+												width:20%; float:left;">Gender</div>
+												<div class="left-option" style="
+												width:25%; float:left;">
+													<div class="" id="radioinput1"><input type="radio" id="male" name="gender" value="M"><label style="display:inline-block;" for="male">Male</label></div>
+												</div>
+												<div class="right-option" style="
+												width:30%; float:right;">
+													<div class="" id="radioinput2"><input type="radio" id="Female" name="gender" value="F"><label style="display:inline-block;" for="Female">Female</labediv>
+												</div>
+											</div>
+
+										</div>
+										<!--<div class="field">
+											<div class="Role" id="Role">
+												<div class="radioinput"><input type="radio" id="athlete" name="role" value="A" /></div>
+												<div class="radio"><label for="athlete">An Athlete</label></div>
+												<div class="radioinput"><input type="radio" id="Fan" name="role" value="F"></div>
+												<div class="radio"><label for="Fan">A Fan</label></div>
+											</div>
+										</div>-->
+
+					<div class="field">
+						<span>Password</span>
 						<input type="password" name="password" id="password" placeholder="Password" />
+						<input type="password" name="re_password" id="re_password" placeholder="Password Again" />
 					</div>
-					<div class="seventhdiv">
-						<div class="label">
-							<label for="CPassword">Confirm</label>
-						</div>	
-						<input type="password" name="re_password" id="re_password" placeholder="Password" />
-					</div>
+
 					
-					<div>
-						<input type="checkbox" name="re_terms_conditions" class="terms-condition terms-condition-h" />
-						I Accept<a href="tos.html" target="_blank">Terms and Conditions</a>
+					<div style="height:40px; margin:10px 0 10px 0;">
+						<div class="row-fluid field">
+							<label for="re_terms_conditions">
+								<input type="checkbox" class="terms-condition-h" id="re_terms_conditions" name="re_terms_conditions"/>I have read and agree to the <a href="tos.html" target="_blank" style="text-decoration:underline;">Terms of Service</a>
+							</label>
+						</div>
 					</div>
-					
-					</div>
-					<div id="submitbutton">
-						<input type="submit" name="create" value="Sign Up" class="regsubmitfinal" />
-					</div>	
+
+					<input type="submit" name="create" value="Sign Up" class="next btn-common btn-green regsubmitfinal" />
+
 				</form>
 				
 			<%  if(!page) { %>	<br /><br/>
